package edu.hitsz.prop;

import edu.hitsz.basic.AbstractFlyingObject;

public abstract class AbstractProp extends AbstractFlyingObject {
    public abstract void  PropActive();
}
